[package]
name = "identity_sample"
version = "0.1.0"
authors = ["Travis James <travis@tribehealthsolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main"}
smol = "1.2.5"
smol-potat = { version = "1.1.2", features = ["auto"] }
tokio = { version = "0.2.25", features = ["full"] }
